# sandbox-c-unit-testting

./: .gitignore  CMakelists.txt  README.md  clean.sh  rebuild.sh
src/: main.c  mathy.c  mathy.h  pathy.c  pathy.h
tests/: CMakeLists.txt  test_mathy.cc  test_pathy.cc
tests/gtest/: CMakeLists.txt  test_mathy.cc
tests/unity/: CMakeLists.txt
tests/unity/runners/: all_tests.c  test_runner.c
tests/unity/tests/: test_mathy.c  test_pathy.c
tests/unity/tests/runners/: test_runner.c
